[gd_scene load_steps=2 format=3 uid="uid://bg0i5lpgilsgc"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_0kcde"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0kcde")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.95
anchor_right = 0.025
anchor_bottom = 0.95
offset_top = -136.0
offset_right = 160.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="ButtonsContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
